--- a/application/src/main/webapp/css/components/chatMessage.less
+++ b/application/src/main/webapp/css/components/chatMessage.less
@@ -19,7 +19,7 @@
     .flex-center;
     justify-content: space-around;
     text-align: center;
-    span {
+    > span {
       flex: 0 0 250px;
     }
     &:before, &:after {
