--- a/application/src/main/webapp/css/components/roomDetail.less
+++ b/application/src/main/webapp/css/components/roomDetail.less
@@ -24,6 +24,9 @@
   margin-left: auto;
   z-index: 10;
 
+  [class^="uiIcon"]:before {
+    color: @secondaryIconColor;
+  }
   .uiIconChatRecordStart:before {
     content: "\e775";
   }
